# sleepwalker

./: .gitignore  AGENTS.md  README.md  flake.nix
.omp/skills/sleepwalker-bench/: SKILL.md
.omp/skills/sleepwalker-commands/: SKILL.md
.omp/skills/sleepwalker-verification/: SKILL.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/sleepwalker-app/: build.gradle.kts  proguard-rules.pro
android/sleepwalker-core/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/ble_uart/: CMakeLists.txt
firmware/components/ble_uart/include/: ble_uart.h
firmware/components/ble_uart/src/: ble_uart.c
firmware/components/hid_bridge/: CMakeLists.txt
firmware/components/hid_bridge/include/: hid_bridge.h
firmware/components/hid_bridge/src/: hid_bridge.c
firmware/components/safety/: CMakeLists.txt
firmware/components/safety/include/: safety.h
firmware/components/safety/src/: safety.c
firmware/components/sleepwalker_protocol/: CMakeLists.txt
firmware/components/sleepwalker_protocol/include/: sleepwalker_protocol.h
firmware/components/sleepwalker_protocol/src/: sleepwalker_protocol.c
firmware/components/sw_log/: CMakeLists.txt
firmware/components/sw_log/include/: sw_log.h
firmware/components/sw_log/src/: sw_log.c
firmware/components/usb_hid/: CMakeLists.txt  idf_component.yml
firmware/components/usb_hid/include/: usb_hid.h
firmware/components/usb_hid/src/: usb_hid.c
firmware/main/: CMakeLists.txt
firmware/main/src/: main.c
hardware/: COMMISSIONING-DETOURS.md  COMMISSIONING.md
nix/: adb-logcat.nix  adb-ops.nix  apk-build.nix  apk-install.nix  artifacts.nix  bench-validate.nix  editor-conformance-check.nix  esp-reset.nix  fw-build.nix  fw-flash-usb.nix  fw-flash.nix  fw-uart.nix  hid-observe.nix  human-gate.nix  observer-authorized_keys  observer-helper.nix  observer-host.nix  observer-prepare.nix  protocol-check.nix  protocol-pkg.nix  readline-8.2.nix  readline-fixture-ctl.nix  readline-fixture-start.nix  readline-fixture.nix  readline-keymap.nix  smoke-composite.nix  smoke-editor-conformance.nix  smoke-editor-conformance.py  smoke-keyboard.nix  smoke-mouse.nix  smoke-text-identity.nix  smoke-text-identity.py  smoke-text.nix  text-sink-ctl.nix  text-sink-read.nix  text-sink-start.nix
nix/observer-fixture-src/: Makefile  readline-fixture.c
nix/observer-helper-src/: Makefile  observer-helper-test.c  observer-helper.c  sleepwalker-hid-observer  text-sink.c
nix/tests/: test_smoke_editor_conformance.py
openspec/changes/add-android-readline-editor-mode/: design.md  tasks.md
openspec/changes/add-hypothesis-text-identity-hil/: tasks.md
openspec/changes/add-lua-editor-mode/: tasks.md
openspec/changes/bootstrap-sleepwalker-autonomous-hil/: design.md  tasks.md
openspec/changes/define-core-api-and-mouse-surface/: proposal.md  tasks.md
openspec/changes/integrate-omnikeymap-flake-input/: design.md  tasks.md
openspec/changes/keymap-data-driven-codegen/: tasks.md
openspec/changes/redesign-lua-editor-abi/: design.md  tasks.md
openspec/changes/stabilize-composite-hid-regressions/: design.md  proposal.md
openspec/specs/agent-operated-hil/: spec.md
openspec/specs/android-ble-companion/: spec.md
openspec/specs/editor-target-conformance/: spec.md
protocol/: README.md  pyproject.toml
protocol/fixtures/layouts/linux/: us.json
protocol/src/sleepwalker_protocol/: fixtures.py  frame.py  generator.py  mouse.py  opcodes.py  status.py  usages.py
protocol/src/sleepwalker_protocol/fixtures/: index.json
protocol/src/sleepwalker_protocol/tests/: __init__.py  test_fixtures.py  test_frame.py  test_mouse.py
sleepwalker-hil/: bench.example.toml
(+145 files in other folders)
