[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleepwalker-protocol"
version = "0.1.0"
description = "Shared sleepwalker HID protocol: frames, opcodes, golden fixtures"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sleepwalker" }]
keywords = ["hid", "protocol", "esp32", "ble", "hil"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sleepwalker_protocol*"]

[tool.setuptools.package-data]
sleepwalker_protocol = ["fixtures/*.bin", "fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"